Shortcut of quick note

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NoteMaster</string>
+    <string name="shortcut_quick_note_short_label">Швидка нотатка</string>
+    <string name="shortcut_quick_note_long_label">Створити швидку нотатку</string>
 </resources>
